fix for the mute status icon not showing in director controls

--- a/main.css
+++ b/main.css
@@ -5413,3 +5413,6 @@ button.toggleSettings,
 	outline: none;
 	color: white;
 }
+#sharefilebutton{
+	display:none!important;
+}
